turned the two shared footers into one partial called '_footer_links' - moved the if statement that checks if we are on groups/show in the partial - added a 'floating-button-bar' div alongside 'footer fixed-bottom' div to application.html.erb -> the footer displays on mobile and the floating button bar displays on larger screens

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,24 @@
 #content-wrapper {
   margin-top: 70px;
 }
+
+
+@media (min-width: 768px) {
+  .footer {
+    display: none;
+  }
+
+  .floating-button-bar {
+    position: fixed;
+    bottom: 50px;
+    width: 60%;
+    background-color: $our-red;
+    border-radius: 25px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    padding: 0 12px;
+    left: 50%; /* Set the left position to 50% */
+    transform: translateX(-50%); /* Center the element horizontally */
+  }
+}
